tdf#154884: do not stop if the first pair is not what we looked for

The same character can be added later with a different font, so keep searching

Change-Id: I7b83438ca476ffab23ca08268cf957045d75f6f2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150937
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 5a1d07a819bd0f14dd901b35ae245bcd681cb512)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150921
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>